--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.4.1
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
