--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
   get_it: ^8.0.3
+  go_router: ^14.7.2
 
 dev_dependencies:
   flutter_test:
