--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,17 @@ dependencies:
   equatable: ^2.0.7
   get_it: ^8.0.3
   go_router: ^14.7.2
+  path_provider: ^2.1.5
+  sqflite: ^2.4.1
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.13
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
