--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   sqflite: ^2.4.1
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  flutter_screenutil: ^5.9.3
+  intl: ^0.20.2
+  fl_chart: ^0.70.2
 
 
 dev_dependencies:
