--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   intl: ^0.20.2
   fl_chart: ^0.70.2
+  flutter_secure_storage: ^9.2.4
 
 
 dev_dependencies:
@@ -67,6 +68,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
