--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
+  google_fonts: ^6.2.1
+  google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
 
 
 dev_dependencies:
