--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,4 +47,7 @@ flutter {
 dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.8.0"))
     implementation 'com.google.firebase:firebase-analytics'
+
+    // local_auth
+    implementation 'com.android.support:multidex:1.0.3'
 }
