--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   flutter_screenutil: ^5.9.3
-  intl: ^0.20.2
+  intl: ^0.19.0
   fl_chart: ^0.70.2
   flutter_secure_storage: ^9.2.4
   json_annotation: ^4.9.0
@@ -53,6 +53,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
   flutter_facebook_auth: ^7.1.1
+  local_auth: ^2.3.0
 
 
 dev_dependencies:
